tests/baselines/reference/optionalParamReferencingOtherParams2.errors.txt
==== tests/cases/compiler/optionalParamReferencingOtherParams2.ts (1 errors) ====
    var a = 1;
    function strange(x = a, y = b) { 
                                ~
!!! optionalParamReferencingOtherParams2.ts(2,29): error TS2190: Initializer of parameter 'y' cannot reference identifier 'b' declared after it.
        var b = "";
        return y;
    }